k8s/coma/apps/misskey/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: misskey
  namespace: misskey
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    traefik.ingress.kubernetes.io/router.middlewares: default/https-redirect@kubernetescrd,default/hsts@kubernetescrd
spec:
  rules:
    - host: "ms.artichoke.cc"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: misskey
                port:
                  number: 3000
  tls:
    - hosts:
        - "ms.artichoke.cc"
      secretName: artichokecc-cert
